--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,36 @@
+:root {
+  /** Base colors */
+  --clr-dark-a0: #000000;
+  --clr-light-a0: #ffffff;
+
+  /** Dark theme primary colors */
+  --clr-primary-a0: #2b6d20;
+  --clr-primary-a10: #457d38;
+  --clr-primary-a20: #5c8c50;
+  --clr-primary-a30: #739c67;
+  --clr-primary-a40: #8aac7f;
+  --clr-primary-a50: #a1bc98;
+
+  /** Dark theme surface colors */
+  --clr-surface-a0: #121212;
+  --clr-surface-a10: #282828;
+  --clr-surface-a20: #3f3f3f;
+  --clr-surface-a30: #575757;
+  --clr-surface-a40: #717171;
+  --clr-surface-a50: #8b8b8b;
+
+  /** Dark theme tonal surface colors */
+  --clr-surface-tonal-a0: #161b15;
+  --clr-surface-tonal-a10: #2b302a;
+  --clr-surface-tonal-a20: #424641;
+  --clr-surface-tonal-a30: #5a5e59;
+  --clr-surface-tonal-a40: #737772;
+  --clr-surface-tonal-a50: #8d908d;
+
+  /** Borders */
+  --br-radius: 0.5rem;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -11,19 +44,23 @@ body {
 }
 
 body {
-  background: lightblue;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+button {
+  color: var(--clr-dark-a0);
+  background-color: var(--clr-primary-a20);
 }
 
-h1 {
-  font-weight: 300;
+input {
+  color: var(--clr-light-a0);
+  background-color: var(--clr-surface-a10);
+  border-color: var(--clr-surface-a10);
+  border-radius: var(--br-radius);
+  padding: 0.5rem;
+}
+
+::placeholder {
+  color: var(--clr-surface-a50);
 }
