--- a/src/components/molecules/DpsCalc/DpsCalc.module.css
+++ b/src/components/molecules/DpsCalc/DpsCalc.module.css
@@ -4,20 +4,31 @@
   border: 1px solid var(--clr-surface-a30);
   padding: 1rem;
   border-radius: var(--br-radius);
+  align-self: center;
 }
 
-.row {
+.form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-input {
-  max-width: 100px;
+.row {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.input {
+  max-width: 140px;
+}
+
+h3::first-letter {
+  text-transform: capitalize;
 }
 
 @media (min-width: 768px) {
   .row {
-    flex-direction: row;
+    justify-content: flex-start;
   }
 }
