--- a/src/App.module.css
+++ b/src/App.module.css
@@ -41,6 +41,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  background-color: var(--clr-surface-a0);
 }
 
 h1,
@@ -51,6 +52,19 @@ h5,
 h6,
 p {
   margin: 0.4rem 0;
+}
+
+h1,
+h2 {
+  color: var(--clr-primary-a50);
+}
+
+h3,
+h4,
+h5,
+h6,
+p {
+  color: var(--clr-light-a0);
 }
 
 body {
