--- a/src/components/molecules/DpsCalc/DpsCalc.module.css
+++ b/src/components/molecules/DpsCalc/DpsCalc.module.css
@@ -11,6 +11,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  border-right: 1px solid var(--clr-surface-a30);
+  padding-right: 1rem;
 }
 
 .row {
