--- a/src/components/atoms/Input/Input.module.css
+++ b/src/components/atoms/Input/Input.module.css
@@ -1,6 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  padding: 1rem;
+}
+
+.container span {
+  color: var(--clr-error);
 }
