--- a/src/components/molecules/Nav/Nav.module.css
+++ b/src/components/molecules/Nav/Nav.module.css
@@ -1,10 +1,10 @@
 nav {
-  position: fixed;
   display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: var(--nav-width);
-  padding: var(--vertical-page-padding) 16px;
+  justify-content: space-between;
+  position: fixed;
+  height: var(--nav-height);
+  width: 100%;
+  padding: 8px 16px;
   background-color: var(--clr-surface-a10);
 }
 
@@ -18,6 +18,25 @@ nav a {
   text-decoration: none;
 }
 
+nav hr {
+  display: none;
+}
+
 .active {
   color: var(--clr-primary-a50);
+}
+
+@media screen and (min-width: 768px) {
+  nav {
+    position: fixed;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100vh;
+    width: var(--nav-width);
+    padding: var(--vertical-page-padding) 16px;
+  }
+
+  nav hr {
+    display: block;
+  }
 }
