--- a/src/components/pages/DpsCalc/DpsCalc.module.css
+++ b/src/components/pages/DpsCalc/DpsCalc.module.css
@@ -7,8 +7,8 @@
 
 .formWrapper {
   display: flex;
-  gap: 64px;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .form {
@@ -54,5 +54,11 @@
 @media (min-width: 768px) {
   .row {
     justify-content: flex-start;
+  }
+
+  .formWrapper {
+    flex-direction: row;
+    gap: 64px;
+    justify-content: space-between;
   }
 }
