--- a/src/components/pages/DpsCalc/DpsCalc.module.css
+++ b/src/components/pages/DpsCalc/DpsCalc.module.css
@@ -11,6 +11,7 @@
 }
 
 .formWrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -35,6 +36,10 @@
 .clearButton {
   align-self: flex-end;
   background-color: transparent;
+}
+
+.itemNameContainer {
+  min-width: 200px;
 }
 
 .summaryContainer {
